--- a/testApp01/config.ini
+++ b/testApp01/config.ini
@@ -1,6 +1,7 @@
 [config]
 platformName=Android
-platformVersion=4.3
+platformVersion=4.4.2
 appPackage=com.sheinside
-deviceName=5978f602
+deviceName=52f338e1
 baseUrl=http://127.0.0.1:4723/wd/hub
+findElementTimes=10
