add Exception solve2

--- a/testApp01/config.ini
+++ b/testApp01/config.ini
@@ -1,7 +1,7 @@
 [config]
 platformName=Android
-platformVersion=4.4.2
+platformVersion=5.1.1
 appPackage=com.sheinside
-deviceName=52f338e1
+deviceName=02157df295b7ae39
 baseUrl=http://127.0.0.1:4723/wd/hub
 findElementTimes=10
