use adb to get devices Name

--- a/testApp01/config.ini
+++ b/testApp01/config.ini
@@ -1,7 +1,12 @@
 [config]
+apkPath=
 platformName=Android
-platformVersion=5.1.1
 appPackage=com.sheinside
-deviceName=02157df295b7ae39
 baseUrl=http://127.0.0.1:4723/wd/hub
 findElementTimes=10
+[adb]
+viewPhone=adb devices
+viewAndroid=adb shell grep ro.build.version.release /system/build.prop
+openPhone=adb shell input keyevent 26
+installSoftware=adb install
+uninstallSoftware=adb uninstall
