modify the run.py

--- a/testApp01/config.ini
+++ b/testApp01/config.ini
@@ -2,6 +2,7 @@
 apkPath=
 platformName=Android
 appPackage=com.sheinside
+appActivity=.module.GuideActivity
 baseUrl=http://127.0.0.1:4723/wd/hub
 findElementTimes=10
 [adb]
