--- a/testApp01/config.ini
+++ b/testApp01/config.ini
@@ -1,5 +1,5 @@
 [config]
-apppiumPath =
+appiumPath =D:\Program Files (x86)\Appium
 platformName=Android
 appPackage=com.sheinside
 appActivity=.module.GuideActivity
