add function to get server status

--- a/testApp01/config.ini
+++ b/testApp01/config.ini
@@ -1,5 +1,5 @@
 [config]
-appiumPath =D:\Program Files (x86)\Appium
+appiumPath =D:\Program Files\Appium
 platformName=Android
 appPackage=com.sheinside
 appActivity=.module.GuideActivity
