--- a/testApp01/config.ini
+++ b/testApp01/config.ini
@@ -5,7 +5,10 @@ appPackage=com.sheinside
 appActivity=.module.GuideActivity
 baseUrl=http://127.0.0.1:4723/wd/hub
 findElementTimes=10
-[adb]
+[cmd]
+startServer=abd statr-server
+closeServer=abb kill-server
+checkPhone=adb get-state
 viewPhone=adb devices
 viewAndroid=adb shell grep ro.build.version.release /system/build.prop
 openPhone=adb shell input keyevent 26
