--- a/testApp01/config.ini
+++ b/testApp01/config.ini
@@ -13,4 +13,4 @@ viewPhone=adb devices
 viewAndroid=adb shell grep ro.build.version.release /system/build.prop
 openPhone=adb shell input keyevent 26
 installSoftware=adb install
-uninstallSoftware=adb uninstall
+uninstallSoftware=adb uninstall com.sheinside
