--- a/testApp01/config.ini
+++ b/testApp01/config.ini
@@ -1,12 +1,12 @@
 [config]
 platformName=Android
-appPackage=com.sheinside
-appActivity=.module.GuideActivity
-baseUrl=http://0.0.0.0:4723/wd/hub
+appPackage=com.romwe
+appActivity=com.romwe.SplashActivity
+baseUrl=http://127.0.0.1:4723/wd/hub
 findElementTimes=10
 [cmd]
-openAppium=node /Applications/Appium.app/Contents/Resources/node_modules/appium/bin/appium.js
-stopAppium=pkill node
+openAppium=node D:/workprogram/Appium/node_modules/appium/bin/appium.js
+stopAppium=kill node
 startServer=abd statr-server
 closeServer=abb kill-server
 checkPhone=adb get-state
