--- a/testApp01/config.ini
+++ b/testApp01/config.ini
@@ -1,7 +1,7 @@
 [config]
 platformName=Android
-appPackage=com.romwe
-appActivity=com.romwe.SplashActivity
+appPackage=xxxx
+appActivity=xxxxxx
 baseUrl=http://127.0.0.1:4723/wd/hub
 findElementTimes=10
 [cmd]
